--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -4,7 +4,7 @@
     <form #f="ngForm" (ngSubmit)="save(f.value)" >
           <div class="form-group">
             <label for="title">Title</label>
-            <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+            <input #title="ngModel" [(ngModel)]="product.title" name="title" id="title" type="text" class="form-control" required>
             <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
               Title is required.
             </div>
@@ -13,7 +13,7 @@
             <label for="price">Price</label>
             <div class="input-group">
               <span class="input-group-addon">$</span>
-              <input #price="ngModel" ngModel name="price" id="price" type="number" class="form-control" required [min]="0">
+              <input #price="ngModel" [(ngModel)]="product.price" name="price" id="price" type="number" class="form-control" required [min]="0">
             </div>
             <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
                 <div *ngIf="price.errors.required">Price is required.</div>
@@ -22,7 +22,7 @@
           </div>
           <div class="form-group">
             <label for="category">category</label>
-            <select #category="ngModel" ngModel name="category" id="category"  class="form-control" required>
+            <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category"  class="form-control" required>
               <option value=""></option>
               <option *ngFor="let c of categories$ | async" [value]="c.$key">
                 {{ c.name }}
@@ -34,7 +34,7 @@
           </div>
           <div class="form-group">
               <label for="imageUrl">image URL</label>
-              <input #imageUrl="ngModel" ngModel name="iamgeUrl" id="imageUrl" type="text" class="form-control" required url>
+              <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control" required url>
               <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
                 <div *ngIf="imageUrl.errors.required">imageUrl is required.</div>
                 <div *ngIf="imageUrl.errors.url">Please enter a valid URL.</div>
@@ -45,10 +45,10 @@
   </div>
   <div class="col-md-6">
       <div class="card" style="width: 18rem;">
-          <img [src]="imageUrl.value" class="card-img-top" >
+          <img [src]="product.imageUrl" *ngIf="product.imageUrl" class="card-img-top" >
           <div class="card-body">
-            <h5 class="card-title">{{ title.value }}</h5>
-            <p class="card-text">{{ price.value | currency:'USD':true }} </p>
+            <h5 class="card-title">{{ product.title }}</h5>
+            <p class="card-text">{{  product.price | currency:'USD':true }} </p>
           </div>
         </div>
   </div>
