--- a/src/app/products/product-filter/product-filter.component.html
+++ b/src/app/products/product-filter/product-filter.component.html
@@ -1,4 +1,5 @@
 
+<div class="sticky-top">
  <div class="list-group">
     <a 
       class="list-group-item list-group-item-action" 
@@ -15,3 +16,4 @@
       {{ c.name }}
     </a>
   </div>
+</div>
