--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -4,10 +4,10 @@
       <h5 class="card-title">{{ product.title}}</h5>
       <p class="card-text">{{ product.price | currency:'USD':true }}</p>
     </div>
-    <div class="card-footer">
+    <div *ngIf="showActions"  class="card-footer">
         <button 
           (click)="addToCart(product)"
-          *ngIf="showActions" 
           class="btn btn-primary btn-block">Add to Cart</button>
+        <div>{{ getQuantity() }}</div>
     </div>
   </div>
