--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -6,8 +6,22 @@
     </div>
     <div *ngIf="showActions"  class="card-footer">
         <button 
+          *ngIf="getQuantity() === 0; else updateQuantity"
           (click)="addToCart(product)"
-          class="btn btn-primary btn-block">Add to Cart</button>
-        <div>{{ getQuantity() }}</div>
+          class="btn btn-secondry btn-block">Add to Cart</button>
+        <ng-template #updateQuantity>
+          <div class="row no-gutters">
+            <div class="col-2">
+              <button class="btn btn-secondry btn-block">-</button>
+            </div>
+            <div class="col text-center">
+              {{ getQuantity() }} in cart
+            </div>
+            <div class="col-2">
+                <button class="btn btn-secondry btn-block">+</button>
+            </div>
+          </div>
+        </ng-template>
+        <div></div>  
     </div>
   </div>
