--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -4,27 +4,13 @@
       <h5 class="card-title">{{ product.title}}</h5>
       <p class="card-text">{{ product.price | currency:'USD':true }}</p>
     </div>
-    <div *ngIf="showActions"  class="card-footer">
+    <div *ngIf="showActions && ShoppingCart"  class="card-footer">
         <button 
-          *ngIf="getQuantity() === 0; else updateQuantity"
+          *ngIf="ShoppingCart.getQuantity(product) === 0; else updateQuantity"
           (click)="addToCart()"
           class="btn btn-secondry btn-block">Add to Cart</button>
         <ng-template #updateQuantity>
-          <div class="row no-gutters">
-            <div class="col-2">
-              <button 
-                (click)="removeFromCart()"
-                class="btn btn-secondry btn-block">-</button>
-            </div>
-            <div class="col text-center">
-              {{ getQuantity() }} in cart
-            </div>
-            <div class="col-2">
-                <button 
-                  (click)="addToCart()"  
-                  class="btn btn-secondry btn-block">+</button>
-            </div>
-          </div>
+          <product-quantity [product]="product" [shopping-cart]="ShoppingCart"></product-quantity>
         </ng-template>
         <div></div>  
     </div>
