--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,25 +1,29 @@
 <h1>Shopping Cart</h1>
-<ng-container *ngIf="cart$ | async as cart">
+<div class="row col-10"  *ngIf="cart$ | async as cart">
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping cart.
   </p>
   <table class="table">
     <thead>
       <tr>
-        <th>Product</th>
-        <th>Quantity</th>
         <th></th>
+        <th>Product</th>
+        <th class="text-center">Quantity</th>
+        <th class="text-right">Price</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of cart.items">
+        <td>
+          <div [style.background-image]="'url(' + item.imageUrl + ')'" class="thumbnail"></div>
+        </td>
         <td>
           {{ item.title }}
         </td>
         <td>
           <product-quantity [product]="item" [shopping-cart]="cart"></product-quantity>
         </td>
-        <td>
+        <td class="text-right">
           {{ item.totalPrice | currency:'USD':true }}
         </td>
       </tr>
@@ -28,11 +32,12 @@
       <tr>
         <th></th>
         <th></th>
-        <th>{{ cart.totalPrice | currency:'USD':true }}</th>
+        <th></th>
+        <th class="text-right">{{ cart.totalPrice | currency:'USD':true }}</th>
       </tr>
     </tfoot>
   </table>
   <button 
     (click)="clearCart()"
     class="btn btn-danger btn-sm">Clear Shopping Cart</button>
-</ng-container>
+</div >
