--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -2,6 +2,9 @@
 <div class="row col-10"  *ngIf="cart$ | async as cart">
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping cart.
+    <button 
+    (click)="clearCart()"
+    class="btn btn-light btn-sm">Clear Shopping Cart</button>
   </p>
   <table class="table">
     <thead>
@@ -37,7 +40,8 @@
       </tr>
     </tfoot>
   </table>
-  <button 
-    (click)="clearCart()"
-    class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+  <a
+    routerLink="/check-out" 
+    class="btn btn-primary">Check Out</a>
+  
 </div >
